objects/vlocity_cmt__RuleFilter__c.object
<CustomObject>
    <description>Vlocity Rules can be applied to anything. Rule filters define what the rule applies to and the conditions under which the rule fires or not.</description>
    <fields>
        <fullName>vlocity_cmt__ActionTaken__c</fullName>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Policy Action</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Do Not Qualify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContextActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context Action</label>
        <referenceTo>vlocity_cmt__ContextAction__c</referenceTo>
        <relationshipLabel>Rule Filters</relationshipLabel>
        <relationshipName>RuleFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The entity filter Id</description>
        <label>Entity Filter</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Rule Filters</relationshipLabel>
        <relationshipName>RuleFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleId__c</fullName>
        <label>Rule</label>
        <referenceTo>vlocity_cmt__Rule__c</referenceTo>
        <relationshipLabel>Rule Filters</relationshipLabel>
        <relationshipName>RuleFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Rule Filter</label>
    <nameField>
        <displayFormat>RF-{00000000}</displayFormat>
        <label>Rule Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>